GNOME Bugzilla – Bug 786382
Unmatched single quote in C++ source breaks aliases
Last modified: 2018-07-30 10:57:04 UTC
C++14 added the ability to use a single quote character as a digit separator, making the following legal C++ code: int x = 10'000; This appears to break any aliases that appear below that line, as in the following example: ALIASES += "fixme=\xrefitem fixme \"Fixme\" \"Fixme List\"" int x = 10'000; // ...some intervening lines of code... //! \fixme this line produces a warning Generates the warning: Found unknown command `\fixme'
As discussed in https://github.com/doxygen/doxygen/pull/734 , Doxygen has moved its issue tracking to https://github.com/doxygen/doxygen/issues All Doxygen tickets in GNOME Bugzilla have been migrated to Github. You can subscribe and participate in the new ticket in Github. You can find the corresponding Github ticket by searching for its Bugzilla ID (number) in Github. Hence I am closing this GNOME Bugzilla ticket. Please use the corresponding ticket in Github instead. Thanks a lot!