Removed C++14 digit separator as it confuses doxygen. See https://bugzilla.gnome.org/show_bug.cgi?id=786382